# custom-minidb

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/minidb/: buffer.hpp  database.hpp  entry.hpp  pager.hpp  record.hpp
src/: buffer.cpp  database.cpp  pager.cpp
tests/: main.cpp  test_buffer.cpp  test_database.cpp  test_entry.cpp  test_pager.cpp
